table, menu fragment added

--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,18 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_table"
         android:icon="@drawable/ic_desktop_mac_white_24dp"
-        android:title="@string/title_home" />
+        android:title="@string/title_table" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_menu"
+        android:icon="@drawable/ic_restaurant_menu_black_24dp"
+        android:title="@string/title_menu" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_accounting"
+        android:icon="@drawable/ic_attach_money_black_24dp"
+        android:title="@string/title_accounting" />
+
+    <item
+        android:id="@+id/navigation_setting"
+        android:icon="@drawable/ic_settings_black_24dp"
+        android:title="@string/title_setting" />
 
 </menu>
