--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -51,6 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:id="@+id/menu_main_bt"
+                android:background="@color/colorBlue"
                 android:text="주메뉴" />
 
             <Button
