--- a/app/src/main/res/layout/activity_order_list.xml
+++ b/app/src/main/res/layout/activity_order_list.xml
@@ -12,13 +12,13 @@
         android:padding="8sp"
         app:layout_constraintTop_toTopOf="parent"
         >
+
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:background="#ffffff"
-            android:text="돌아가기"
-            android:textSize="32sp"/>
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/ic_back"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
