--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -42,26 +42,43 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar"></LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/baseline">
 
-        <TextView
-            android:id="@+id/pay_total_money"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:text="총 금액 : 19,000원"
-            android:textSize="30dp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:text="총 금액 : "
+                android:textSize="32dp" />
+
+            <TextView
+                android:id="@+id/pay_total_money"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:text="0 원"
+                android:textSize="32dp"/>
+
+
+
+        </LinearLayout>
+
 
         <EditText
             android:id="@+id/pay_money"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:hint="결제할 금액(원)"
+            android:hint=" 결제할 금액(원) "
             android:inputType="number"
             android:textSize="25dp" />
     </LinearLayout>
