--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -4,6 +4,63 @@
     android:layout_height="match_parent"
     tools:context="com.jiecompany.restaurantpos.SettingFragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/setting_modify_table_number"
+            android:padding="16sp"
+            android:orientation="horizontal"
+            android:background="@drawable/border">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="테이블 개수 변경"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:layout_weight="1"/>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_chevron_right_black_24dp"
+                android:scaleX="0.2"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="3"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/setting_modify_password"
+            android:padding="16sp"
+            android:orientation="horizontal"
+            android:background="@drawable/border">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="비밀번호 변경"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:layout_weight="1"/>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_chevron_right_black_24dp"
+                android:scaleX="0.2"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="3"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </FrameLayout>
